Sonar: sonarfixes etter initiell commit, fjerne duplikat codeql (#4)