@@ -2,7 +2,6 @@ package no.nav.foreldrepenger.graphql.codegen.model.definitions;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import graphql.language.Comment;
 import graphql.language.FieldDefinition;
@@ -21,9 +20,9 @@ public class ExtendedFieldDefinition extends FieldDefinition {
         if (description != null && Utils.isNotBlank(description.getContent())) {
             return Collections.singletonList(description.getContent().trim());
         }
-        var comments = getComments();
-        return comments.stream()
+        return getComments().stream()
                 .map(Comment::getContent).filter(Utils::isNotBlank)
-                .map(String::trim).collect(Collectors.toList());
+                .map(String::trim)
+                .toList();
     }
 }
